fix quantity dropdown overlap issue

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -179,6 +179,9 @@ header {
   @media (min-width: 1021px) {
     min-height: calc(950px + 12vw);
   }
+  .hero-content {
+    min-height: 800px;
+  }
 }
 
 #quantity-selector {
